--- a/app/src/main/res/layout/tabs_layout.xml
+++ b/app/src/main/res/layout/tabs_layout.xml
@@ -14,18 +14,49 @@
 
         <Button
             android:id="@+id/create_button"
-            android:layout_width="180dp"
-            android:layout_height="36dp"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
             android:layout_gravity="bottom|center"
-            android:layout_marginBottom="60dp"
+            android:layout_marginBottom="70dp"
+            android:paddingStart="12dp"
+            android:paddingEnd="20dp"
             android:background="@drawable/fab_extended"
+            android:drawableLeft="@drawable/ic_add_black_24dp"
+            android:drawablePadding="12dp"
             android:clickable="true"
-            android:elevation="10dp"
+            android:elevation="6dp"
             android:focusable="true"
             android:onClick="clickCreate"
-            android:text="Create notes"
+            android:text="Create"
             android:textColor="@android:color/white"
-            android:textSize="10pt" />
+            android:textSize="14dp"/>
+        
+        <!--<Button-->
+            <!--android:layout_width="40dp"-->
+            <!--android:layout_height="40dp"-->
+            <!--android:layout_gravity="bottom|center"-->
+            <!--android:layout_marginBottom="70dp"-->
+            <!--android:background="@drawable/ic_circle_button"-->
+            <!--android:foreground="@drawable/ic_note_add_black_24dp"/>-->
+
+        <!--<Button-->
+            <!--android:layout_width="40dp"-->
+            <!--android:layout_height="40dp"-->
+            <!--android:layout_marginStart="84dp"-->
+            <!--android:layout_gravity="bottom|center"-->
+            <!--android:layout_marginBottom="70dp"-->
+            <!--android:background="@drawable/ic_circle_button"-->
+            <!--android:foreground="@drawable/ic_add_box_black_24dp"/>-->
+
+        <!--<Button-->
+            <!--android:layout_width="40dp"-->
+            <!--android:layout_height="40dp"-->
+            <!--android:layout_gravity="bottom|center"-->
+            <!--android:layout_marginEnd="84dp"-->
+            <!--android:layout_marginBottom="70dp"-->
+            <!--android:background="@drawable/ic_circle_button"-->
+            <!--android:foreground="@drawable/ic_list_black_24dp"/>-->
+
     </FrameLayout>
 
     <android.support.design.widget.BottomNavigationView
