--- a/app/src/main/res/menu/nav_menu.xml
+++ b/app/src/main/res/menu/nav_menu.xml
@@ -3,12 +3,14 @@
     <group android:checkableBehavior="single">
         <item
             android:id="@+id/nav_notes"
+            android:icon="@drawable/ic_description_black_24dp"
             android:title="@string/nav_menu_item_notes" />
         <item
             android:id="@+id/nav_tasks"
             android:title="@string/nav_menu_item_tasks" />
         <item
             android:id="@+id/nav_calendar"
+            android:icon="@drawable/ic_date_range_black_24dp"
             android:title="@string/nav_menu_item_calendar" />
     </group>
 </menu>
