--- a/app/src/main/res/layout/notes_fragment.xml
+++ b/app/src/main/res/layout/notes_fragment.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:id="@+id/notes_fragment_id"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:id="@+id/notes_fragment_id">
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/textView2"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/notes_fragment_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:textSize="25pt"
-        android:text="@string/textview" />
+        android:layout_height="match_parent"/>
 
 </LinearLayout>
