--- a/app/src/main/res/layout/notes_fragment.xml
+++ b/app/src/main/res/layout/notes_fragment.xml
@@ -3,6 +3,7 @@
     android:id="@+id/notes_fragment_id"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="56dp"
     android:orientation="vertical">
 
     <android.support.v7.widget.RecyclerView
