--- a/app/src/main/res/layout/activity_creation.xml
+++ b/app/src/main/res/layout/activity_creation.xml
@@ -1,9 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".CreationActivity">
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:paddingTop="10dp"
+        android:paddingStart="10dp"
+        android:paddingEnd="10dp"
+        android:paddingBottom="10dp">
+
+        <EditText
+            android:id="@+id/creation_note_header"
+            android:layout_width="match_parent"
+            android:layout_height="56dp"
+            android:hint="@string/creation_note_hint_header"
+            android:inputType="text"
+            android:background="@drawable/edit_text_background"
+            android:layout_marginBottom="5dp"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
+            android:textSize="24dp"/>
+
+        <EditText
+            android:id="@+id/creation_note_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="@string/creation_note_hint_text"
+            android:background="@drawable/edit_text_background"
+            android:textSize="20dp"
+            android:paddingTop="12dp"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
+            android:paddingBottom="12dp"
+            android:inputType="textMultiLine" />
+    </LinearLayout>
+
+    <android.support.design.bottomappbar.BottomAppBar
+        android:id="@+id/creation_bottom_bar"
+        android:layout_width="match_parent"
+        android:layout_height="56dp"
+        android:layout_gravity="bottom"
+        android:backgroundTint="@color/colorPrimary"
+        android:paddingTop="16dp"/>
+
+</android.support.design.widget.CoordinatorLayout>
