--- a/app/src/main/res/layout/recycler_view_card.xml
+++ b/app/src/main/res/layout/recycler_view_card.xml
@@ -1,22 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal">
+    android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/card_header"
         android:layout_width="56dp"
         android:layout_height="wrap_content"
-        android:drawablePadding="32dp"
-        android:drawableLeft="@drawable/ic_check_circle_black_24dp"
-        android:paddingStart="16dp"
-        android:paddingBottom="16dp"
-        android:paddingTop="16dp"
-        android:textSize="16dp"
-        android:elevation="6dp"
-        android:background="@drawable/fab_extended"
         android:layout_margin="10dp"
-        android:layout_weight="1"/>
+        android:layout_weight="1"
+        android:background="@drawable/card_background"
+        android:clickable="true"
+        android:drawablePadding="32dp"
+        android:elevation="6dp"
+        android:paddingStart="16dp"
+        android:paddingTop="16dp"
+        android:paddingBottom="16dp"
+        android:textSize="16dp"
+        tools:drawableLeft="@drawable/ic_description_black_24dp"
+        tools:text="Your notes" />
 
 </LinearLayout>
