--- a/app/src/main/res/layout/activity_creation.xml
+++ b/app/src/main/res/layout/activity_creation.xml
@@ -26,7 +26,7 @@
             android:layout_marginBottom="5dp"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
-            android:textSize="24dp" />
+            android:textSize="24sp" />
 
         <EditText
             android:id="@+id/creation_note_text"
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:hint="@string/creation_note_hint_text"
             android:background="@drawable/edit_text_background"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:paddingTop="12dp"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
@@ -42,14 +42,14 @@
             android:inputType="textMultiLine" />
     </LinearLayout>
 
-    <android.support.design.widget.FloatingActionButton
-        android:layout_width="56dp"
-        android:layout_height="56dp"
-        android:layout_gravity="bottom|right"
-        android:layout_margin="10dp"
-        android:backgroundTint="@color/colorPrimary"
-        android:foreground="@drawable/ic_add_black_24dp"
-        android:foregroundGravity="center"/>
+    <!--<android.support.design.widget.FloatingActionButton-->
+        <!--android:layout_width="56dp"-->
+        <!--android:layout_height="56dp"-->
+        <!--android:layout_gravity="bottom|right"-->
+        <!--android:layout_margin="10dp"-->
+        <!--app:backgroundTint="@color/colorPrimary"-->
+        <!--android:foreground="@drawable/ic_add_black_24dp"-->
+        <!--android:foregroundGravity="center"/>-->
 
     <!--<LinearLayout-->
         <!--android:layout_width="match_parent"-->
