--- a/app/src/main/res/layout/notes_recyclerview_card.xml
+++ b/app/src/main/res/layout/notes_recyclerview_card.xml
@@ -23,19 +23,20 @@
 
             <TextView
                 android:id="@+id/notes_recyclerview_header"
-                android:layout_width="280dp"
+                android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="1"
                 android:gravity="center_vertical"
                 android:paddingStart="12dp"
                 android:paddingEnd="12dp"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 tools:text="Notes header"
-                tools:textSize="20dp" />
+                tools:textSize="20sp" />
 
             <ImageButton
                 android:id="@+id/notes_recyclerview_arrow_down"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_width="56dp"
+                android:layout_height="56dp"
                 android:layout_gravity="center"
                 android:backgroundTint="@color/colorPrimary"
                 android:foreground="@drawable/ic_keyboard_arrow_down_black_24dp"
