--- a/app/src/main/res/layout/activity_creation.xml
+++ b/app/src/main/res/layout/activity_creation.xml
@@ -58,15 +58,22 @@
         <!--android:layout_gravity="bottom"-->
         <!--android:background="@color/colorPrimary"-->
         <!--android:elevation="6dp">-->
-        <!---->
+
         <!--<ImageButton-->
             <!--android:layout_width="56dp"-->
-            <!--android:layout_height="match_parent"-->
-            <!--android:foreground="@drawable/ic_add_black_24dp"-->
+            <!--android:layout_height="56dp"-->
+            <!--android:foreground="@drawable/ic_check_box_black_24dp"-->
             <!--android:foregroundTint="@android:color/black"-->
             <!--android:foregroundGravity="center"-->
             <!--android:backgroundTint="@color/colorPrimary"/>-->
-        <!---->
+
+        <!--<ImageButton-->
+            <!--android:layout_width="56dp"-->
+            <!--android:layout_height="56dp"-->
+            <!--android:foreground="@drawable/ic_description_black_24dp"-->
+            <!--android:foregroundTint="@android:color/black"-->
+            <!--android:foregroundGravity="center"-->
+            <!--android:backgroundTint="@color/colorPrimary"/>-->
     <!--</LinearLayout>-->
 
 </android.support.design.widget.CoordinatorLayout>
