--- a/app/src/main/res/layout/notes_recyclerview_card.xml
+++ b/app/src/main/res/layout/notes_recyclerview_card.xml
@@ -12,35 +12,49 @@
     android:elevation="10dp"
     app:cardCornerRadius="3dp">
 
-        <LinearLayout
-            android:id="@+id/notes_recyclerview_header_container"
-            android:orientation="horizontal"
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:background="@color/colorAccent">-->
+        <!--<ImageButton-->
+            <!--android:layout_width="40dp"-->
+            <!--android:layout_height="40dp"-->
+            <!--android:src="@drawable/ic_check_box_black_24dp"-->
+            <!--android:backgroundTint="@color/colorAccent"/>-->
+        <!---->
+
+    <!--</LinearLayout>-->
+
+    <LinearLayout
+        android:id="@+id/notes_recyclerview_header_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:divider="@drawable/divider"
+        android:dividerPadding="7dp"
+        android:orientation="horizontal"
+        android:showDividers="middle"
+        android:background="@color/colorPrimary">
+
+        <TextView
+            android:id="@+id/notes_recyclerview_header"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:divider="@drawable/divider"
-            android:dividerPadding="7dp"
-            android:showDividers="middle">
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:paddingStart="12dp"
+            android:paddingEnd="12dp"
+            android:textSize="20sp"
+            tools:text="Notes header"
+            tools:textSize="20sp" />
 
-            <TextView
-                android:id="@+id/notes_recyclerview_header"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center_vertical"
-                android:paddingStart="12dp"
-                android:paddingEnd="12dp"
-                android:textSize="20sp"
-                tools:text="Notes header"
-                tools:textSize="20sp" />
-
-            <ImageButton
-                android:id="@+id/notes_recyclerview_arrow_down"
-                android:layout_width="56dp"
-                android:layout_height="56dp"
-                android:layout_gravity="center"
-                android:backgroundTint="@color/colorPrimary"
-                android:foreground="@drawable/ic_keyboard_arrow_down_black_24dp"
-                android:foregroundGravity="center"
-                android:tag="ib"/>
-        </LinearLayout>
+        <ImageButton
+            android:id="@+id/notes_recyclerview_arrow_down"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:layout_gravity="center"
+            android:backgroundTint="@color/colorPrimary"
+            android:foreground="@drawable/ic_keyboard_arrow_down_black_24dp"
+            android:foregroundGravity="center"
+            android:tag="ib" />
+    </LinearLayout>
 </android.support.v7.widget.CardView>
