--- a/app/src/main/res/layout/notes_recyclerview_card.xml
+++ b/app/src/main/res/layout/notes_recyclerview_card.xml
@@ -8,6 +8,7 @@
     android:layout_marginLeft="6dp"
     android:layout_marginTop="6dp"
     android:layout_marginRight="6dp"
+    android:layout_marginBottom="6dp"
     android:backgroundTint="@color/colorPrimary"
     android:elevation="10dp"
     app:cardCornerRadius="3dp">
@@ -55,6 +56,7 @@
             android:backgroundTint="@color/colorPrimary"
             android:foreground="@drawable/ic_keyboard_arrow_down_black_24dp"
             android:foregroundGravity="center"
+            android:clickable="true"
             android:tag="ib" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
