--- a/app/src/main/res/layout/activity_creation.xml
+++ b/app/src/main/res/layout/activity_creation.xml
@@ -51,14 +51,14 @@
         android:background="@color/colorPrimary"
         android:elevation="10dp">
 
-        <!--<ImageButton-->
-            <!--android:id="@+id/creation_bottom_menu_add"-->
-            <!--android:layout_width="56dp"-->
-            <!--android:layout_height="56dp"-->
-            <!--android:onClick="onClick"-->
-            <!--android:background="@drawable/background_button"-->
-            <!--android:foreground="@drawable/ic_add_box_black_24dp"-->
-            <!--android:foregroundGravity="center"/>-->
+        <ImageButton
+            android:id="@+id/creation_bottom_menu_add"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:onClick="onClick"
+            android:background="@drawable/background_button"
+            android:foreground="@drawable/ic_add_box_black_24dp"
+            android:foregroundGravity="center"/>
         <Space
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -83,14 +83,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
-        <!--<ImageButton-->
-            <!--android:id="@+id/creation_bottom_menu_other"-->
-            <!--android:layout_width="56dp"-->
-            <!--android:layout_height="56dp"-->
-            <!--android:onClick="onClick"-->
-            <!--android:background="@drawable/background_button"-->
-            <!--android:foreground="@drawable/ic_more_vert_black_24dp"-->
-            <!--android:foregroundGravity="center"/>-->
+        <ImageButton
+            android:id="@+id/creation_bottom_menu_other"
+            android:layout_width="56dp"
+            android:layout_height="56dp"
+            android:onClick="onClick"
+            android:background="@drawable/background_button"
+            android:foreground="@drawable/ic_more_vert_black_24dp"
+            android:foregroundGravity="center"/>
     </LinearLayout>
 
 </android.support.design.widget.CoordinatorLayout>
