--- a/app/src/main/res/layout/activity_creation.xml
+++ b/app/src/main/res/layout/activity_creation.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:clickable="true"
-    tools:context=".CreationActivity">
+    tools:context=".creation.CreationActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
