--- a/app/src/main/res/layout/activity_creation.xml
+++ b/app/src/main/res/layout/activity_creation.xml
@@ -1,47 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:clickable="true"
     tools:context=".creation.CreationActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingTop="10dp"
-        android:paddingStart="10dp"
-        android:paddingEnd="10dp"
-        android:paddingBottom="10dp">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="56dp"
+        android:orientation="vertical">
 
         <EditText
             android:id="@+id/creation_note_header"
             android:layout_width="match_parent"
-            android:layout_height="56dp"
+            android:layout_height="wrap_content"
             android:hint="@string/creation_note_hint_header"
-            android:inputType="text"
+            android:inputType="textMultiLine"
+            android:maxLines="5"
             android:background="@drawable/edit_text_background"
             android:layout_marginBottom="5dp"
-            android:paddingStart="12dp"
-            android:paddingEnd="12dp"
+            android:padding="20dp"
             android:textSize="24sp" />
 
-        <EditText
-            android:id="@+id/creation_note_text"
+        <LinearLayout
+            android:id="@+id/creation_main_space"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="@string/creation_note_hint_text"
-            android:background="@drawable/edit_text_background"
-            android:textSize="20sp"
-            android:paddingTop="12dp"
-            android:paddingStart="12dp"
-            android:paddingEnd="12dp"
-            android:paddingBottom="12dp"
-            android:inputType="textMultiLine" />
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+
+        </LinearLayout>
+
     </LinearLayout>
+
+
 
     <LinearLayout
         android:layout_width="match_parent"
