--- a/app/src/main/res/layout/creation_note_fragment.xml
+++ b/app/src/main/res/layout/creation_note_fragment.xml
@@ -5,13 +5,14 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <TextView
+    <EditText
         android:id="@+id/creation_note_fragment_text"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:inputType="textMultiLine"
         android:padding="20dp"
         android:hint="@string/creation_note_hint_text"
+        android:gravity="top|start"
         android:textSize="20sp"/>
 
 </LinearLayout>
