--- a/app/src/main/res/layout/creation_list_fragment_recycler_item.xml
+++ b/app/src/main/res/layout/creation_list_fragment_recycler_item.xml
@@ -4,16 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:layout_margin="3dp">
+    android:layout_marginStart="20dp"
+    android:layout_marginEnd="20dp">
 
     <CheckBox
         android:id="@+id/creation_list_fragment_recycler_item_checkbox"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:layout_gravity="center"/>
+
+    <EditText
+        android:id="@+id/creation_list_fragment_recycler_item_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:hint="+ Добавить пункт"
         android:inputType="textMultiLine"
         android:textSize="16sp"
-        android:hint="Test"
-        android:padding="6dp"
+        android:padding="3dp"
+        android:gravity="center_vertical"
         android:background="@drawable/edit_text_background"/>
 
 </LinearLayout>
