--- a/app/src/main/res/layout/notes_recyclerview_card.xml
+++ b/app/src/main/res/layout/notes_recyclerview_card.xml
@@ -6,25 +6,12 @@
     android:layout_width="match_parent"
     android:layout_height="56dp"
     android:layout_marginLeft="6dp"
-    android:layout_marginTop="6dp"
+    android:layout_marginTop="3dp"
     android:layout_marginRight="6dp"
-    android:layout_marginBottom="6dp"
+    android:layout_marginBottom="3dp"
     android:backgroundTint="@color/colorPrimary"
     android:elevation="10dp"
     app:cardCornerRadius="3dp">
-
-    <!--<LinearLayout-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="match_parent"-->
-        <!--android:background="@color/colorAccent">-->
-        <!--<ImageButton-->
-            <!--android:layout_width="40dp"-->
-            <!--android:layout_height="40dp"-->
-            <!--android:src="@drawable/ic_check_box_black_24dp"-->
-            <!--android:backgroundTint="@color/colorAccent"/>-->
-        <!---->
-
-    <!--</LinearLayout>-->
 
     <LinearLayout
         android:id="@+id/notes_recyclerview_header_container"
@@ -33,8 +20,7 @@
         android:divider="@drawable/divider"
         android:dividerPadding="7dp"
         android:orientation="horizontal"
-        android:showDividers="middle"
-        android:background="@color/colorPrimary">
+        android:showDividers="middle">
 
         <TextView
             android:id="@+id/notes_recyclerview_header"
@@ -45,8 +31,7 @@
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
             android:textSize="20sp"
-            tools:text="Notes header"
-            tools:textSize="20sp" />
+            android:hint="(Без названия)" />
 
         <ImageButton
             android:id="@+id/notes_recyclerview_arrow_down"
@@ -57,6 +42,6 @@
             android:foreground="@drawable/ic_keyboard_arrow_down_black_24dp"
             android:foregroundGravity="center"
             android:clickable="true"
-            android:tag="ib" />
+            android:focusable="true" />
     </LinearLayout>
 </android.support.v7.widget.CardView>
