--- a/app/src/main/res/layout/activity_creation.xml
+++ b/app/src/main/res/layout/activity_creation.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -27,7 +26,7 @@
             android:paddingTop="10dp"
             android:paddingBottom="10dp"
             android:paddingEnd="20dp"
-            android:textSize="20sp" />
+            android:textSize="20sp"/>
 
         <LinearLayout
             android:id="@+id/creation_main_space"
@@ -38,21 +37,19 @@
 
     </LinearLayout>
 
-
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="56dp"
         android:orientation="horizontal"
         android:layout_gravity="bottom"
-        android:background="@color/colorPrimary"
-        android:elevation="10dp">
+        android:background="@color/colorPrimary">
 
         <ImageButton
             android:id="@+id/creation_bottom_menu_add"
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:onClick="onClick"
+            android:visibility="invisible"
             android:background="@drawable/background_button"
             android:foreground="@drawable/ic_add_box_black_24dp"
             android:foregroundGravity="center"/>
@@ -85,6 +82,7 @@
             android:layout_width="56dp"
             android:layout_height="56dp"
             android:onClick="onClick"
+            android:visibility="invisible"
             android:background="@drawable/background_button"
             android:foreground="@drawable/ic_more_vert_black_24dp"
             android:foregroundGravity="center"/>
