--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -36,6 +36,7 @@
         app:itemBackground="@color/colorPrimary"
         app:itemIconTint="@color/bottom_navigation_item_background_colors"
         app:itemTextColor="@color/bottom_navigation_item_background_colors"
-        app:menu="@menu/main_bottom_menu" />
+        app:menu="@menu/main_bottom_menu"
+        app:labelVisibilityMode="unlabeled"/>
 
 </RelativeLayout>
