--- a/Monopoly/app/src/main/res/values/styles.xml
+++ b/Monopoly/app/src/main/res/values/styles.xml
@@ -10,6 +10,10 @@
     <!--<style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">-->
 
     <style name="TinyToast">
-        <item name="colorBackground">#a253fc</item>
+        <item name="colorBackground">#b388ff</item>
+        <item name="textColor">#000</item>
+        <item name="textSize">16sp</item>s
+        <item name="strokeColor">#000</item>
+        <item name="strokeWidth">4dp</item>
     </style>
 </resources>
