--- a/Monopoly/app/src/main/res/layout/activity_game.xml
+++ b/Monopoly/app/src/main/res/layout/activity_game.xml
@@ -566,7 +566,7 @@
         android:id="@+id/cube1"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginLeft="40dp"
+        android:layout_marginLeft="50dp"
         android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -577,10 +577,10 @@
         android:id="@+id/cube2"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginRight="40dp"
         android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/buttonThrowCubes"
-        app:layout_constraintRight_toRightOf="@+id/cube1"/>
+        android:layout_marginRight="50dp"
+        app:layout_constraintRight_toRightOf="@+id/cube1"
+        app:layout_constraintTop_toBottomOf="@+id/buttonThrowCubes" />
 
 
 </android.support.constraint.ConstraintLayout>
