new images & fixes & rework

--- a/Monopoly/app/src/main/res/layout-v26/activity_amount_of_players.xml
+++ b/Monopoly/app/src/main/res/layout-v26/activity_amount_of_players.xml
@@ -15,7 +15,7 @@
         android:cursorVisible="true"
         android:text=""
         android:autofillHints="@string/playerNameHint"
-        tools:ignore="LabelFor,UnusedAttribute" />
+        tools:ignore="LabelFor" />
 
     <Button
         android:id="@+id/buttonEnter"
