--- a/app/src/main/res/layout/creation_list_fragment_recycler_addbutton.xml
+++ b/app/src/main/res/layout/creation_list_fragment_recycler_addbutton.xml
@@ -11,6 +11,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:padding="3dp"
         android:src="@drawable/ic_keyboard_arrow_down_black_24dp"/>
 
     <TextView
