--- a/app/src/main/res/menu/creation_top_menu.xml
+++ b/app/src/main/res/menu/creation_top_menu.xml
@@ -5,6 +5,7 @@
         android:id="@+id/creation_top_fixed"
         android:icon="@drawable/ic_lock_black_24dp"
         android:title="@string/creation_top_fixed"
+        android:visible="false"
         app:showAsAction="ifRoom"/>
     <item
         android:id="@+id/creation_top_alarm"
